--- a/pyproject.toml
+++ b/pyproject.toml
@@ -238,6 +238,7 @@ dependencies = [
     "py7zr>=0.20.0",
     "onnxruntime>=1.23.2",
     "rapidocr>=3.4.2",
+    "boto3>=1.40.64",
 ]
 
 [project.optional-dependencies]
