A new tool which can do claims_db SQL queries agentic retrieval has been added.

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,15 @@ NEO4J_PASSWORD="your-neo4j-password"
 NEO4J_DATABASE="neo4j"
 
 # -----------------------------------------------------------------------------
+# Database: PostgreSQL (Claims Intelligence - AWS RDS)
+# -----------------------------------------------------------------------------
+POSTGRES_CLAIMS_HOST="hackathon-db.ceqjfmi6jhdd.ap-southeast-1.rds.amazonaws.com"
+POSTGRES_CLAIMS_PORT=5432
+POSTGRES_CLAIMS_DATABASE="hackathon_db"
+POSTGRES_CLAIMS_USER="hackathon_user"
+POSTGRES_CLAIMS_PASSWORD="Hackathon2025!"
+
+# -----------------------------------------------------------------------------
 # Database: DynamoDB (Payment Records)
 # -----------------------------------------------------------------------------
 DYNAMODB_PAYMENTS_TABLE="lea-payments-local"
